# xpytorchfi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
injection/: bitflips.py  fault_injection.py  xpytorchfi.py
old/: FI_Weights.py  FI_Weights_classification.py  FI_Weights_detection.py  FI_Weights_detection_v2.py  FI_Weights_segmentation.py  core.py  neuron_error_models.py  util.py  weight_error_models.py
src/xpytorchfi/: __init__.py  bitflips.py  experiment.py  fault_generation.py  fault_injection.py  manager.py  neuron_tails.py  xpytorchfi.py
